--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <header>
     <nav>
         <ul>
-            <li><a href="PagePrincipale.html" class="current">Page de Téléchargements </a></li>
+            <li><a href="index.html" class="current">Page de Téléchargements </a></li>
             <li><a href="">Propositions d'ajouts </a></li>
         </ul>
     </nav>
