Update and rename Index.html to index.html

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <header>
     <nav>
         <ul>
-            <li><a href="PagePrincipale.html" class="current">Page de Téléchargements </a></li>
+            <li><a href="index.html" class="current">Page de Téléchargements </a></li>
             <li><a href="">Propositions d'ajouts </a></li>
             <li style="float:right"><a href=#Android> <img src="Images/Android/Android.png" height="20" width="20" alt="Android"> </a></li>
             <li style="float:right"><a href="#Windows"> <img src="Images/Android/Microsoft.png" height="20" width="20"> </a></li>
