--- a/index.html
+++ b/index.html
@@ -20,7 +20,10 @@
 </header>
 
 <!--Titre principal-->
-    <h1>MakeItReady!</h1>
+<div class="banner">
+    <h1 class="banner-title">MakeItReady!</h1>
+</div>
+
 <!--Intro-->
 <p> "MakeItReady!" est une solution simple et pratique si vous souhaitez télécharger  <br>
     rapidement certaines applications indispensables sur votre ordinateur/smartphonne !  <br>
