--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <nav>
         <ul>
             <li><a href="index.html" class="current">Page de Téléchargements </a></li>
-            <li><a href="">Propositions d'ajouts </a></li>
+            <li><a href="form.html">Propositions d'ajouts </a></li>
             <li style="float:right"><a href=#Android> <img src="Images/Android/Android.png" height="20" width="20" alt="Android"> </a></li>
             <li style="float:right"><a href="#Windows"> <img src="Images/Android/Microsoft.png" height="20" width="20"> </a></li>
             <li style="float:right"><a href="#IOS"> <img src="Images/Android/Apple.png" height="20" width="20"> </a></li>
@@ -26,10 +26,10 @@
 
 <!--Intro-->
 <p> "MakeItReady!" est une solution simple et pratique si vous souhaitez télécharger  <br>
-    rapidement certaines applications indispensables sur votre ordinateur/smartphonne !  <br>
+    rapidement certaines applications indispensables sur votre ordinateur/smartphone !  <br>
     Pour ce faire, descendez jusqu'à trouver l'OS recherché, cliquez sur l'application souhaitée<br>
     et voilà ! L'utilitaire d'installation se téléchargera ! Il se peut que certaines<br>
-    images vous redirigent vers le store Microsoft/Google/Apple simplement car il n'existe<br>
+    images vous redirigent vers le store Microsoft/Google/Apple/... simplement car il n'existe<br>
     pas d'autre moyen d'installation officiel pour le logiciel ou pour l'appareil.</p>
 
 <!--Tableaux-->
