--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" href="Style.css" />
     <title>MakeItReady</title>
+    <meta name="google-site-verification" content="v8HjumywoM2uZ2rHZ7W0TFAQmyAO65B7eQZvDL15uGw" />
 </head>
 <body>
 <!--Fenêtres de navigation-->
